--- a/TargetLiveWallpaper/AndroidManifest.xml
+++ b/TargetLiveWallpaper/AndroidManifest.xml
@@ -19,9 +19,9 @@
 -->
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.livecubes">
+    package="com.example.android.livecubes" android:versionCode="1" android:versionName="1">
 
-    <uses-sdk android:minSdkVersion="8"/>
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="9"/>
     <uses-feature android:name="android.software.live_wallpaper" />
 
     <uses-feature android:name="android.software.live_wallpaper" />
