--- a/TargetLiveWallpaper/AndroidManifest.xml
+++ b/TargetLiveWallpaper/AndroidManifest.xml
@@ -19,7 +19,7 @@
 -->
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="1" android:versionName="1" package="puzzleduck.targetLiveWallpaper">
+    package="puzzleduck.targetLiveWallpaper" android:versionName="2" android:versionCode="2">
 
     <uses-sdk android:targetSdkVersion="9" android:minSdkVersion="7"/>
     <uses-feature android:name="android.software.live_wallpaper" />
